shrink comment input field to avoid wrapping of button on smaller screens

--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -232,7 +232,7 @@ main {
 
 #comment-input {
   height: 37px;
-  width: 485px;
+  width: 480px;
   margin: 0px;
   padding: 0px 2px 0px 5px;
   font-size: 90%;
